@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- Really, really make per-thread locking work. Depending on when threads and
+  threads::shared were loaded, you might get an error of the form 'Type of arg
+  1 to threads::shared::share must be one of $@% at .../Log/Dispatch/Syslog.pm
+  line 67, near "$thread_lock)"'. Reported by David Schweikert.
+
+
 2.46     2015-08-05
 
 - Really make the per-thread locking in the Syslog output work. Based on a
